# festify-python

./: .flake8  .gitignore  .pre-commit-config.yaml  db.sqlite3  pyproject.toml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py
festify/api/: models.py  urls.py  views.py
festify/festify/: asgi.py  settings.py  urls.py  wsgi.py
festify/frontend/: urls.py
festify/frontend/src/components/: App.js
frontend/: package-lock.json  package.json
frontend/src/components/: App.js  HomePage.js
frontend/static/frontend/: main.js
