[tool.poetry]
name = "festify-python"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
flake8 = "^6.0.0"
coverage = "^7.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit-hooks = "^4.4.0"
django = "^4.1.6"
djangorestframework = "^3.14.0"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"